# lens

./: .aidevops.json  .coderabbit.yaml  .commit_v011.txt  .commit_v02_e2e_perf.txt  .commit_v02_memos_polytests.txt  .commit_v02_poly.txt  .commit_v02_poly_ux.txt  .commitmsg_round78.txt  .env.example  .gh_admin_org_setup.md  .gitignore  .tag_v011.txt  .tag_v02_poly.txt  ACTION_PLAN.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LENS_Action_Plan.md  LENS_Implementation_Plan.md  MODELS.md  PROJECT SCOPE — Open-Source Qualitative Data Analysis (QDA) Desktop App.md  PROJECT SCOPE — Open-Source Qualitative Data Analysis (QDA) Desktop App.md~  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TODO.md  USER_GUIDE.md  charter-report.json  charter.yaml  index.html  lefthook.yml  navigate.cjs  package-lock.json  package.json  rust-toolchain.toml  vite.config.ts
.beads/: config.yaml
.cargo/: config.toml
.claude/: settings.json
.ctx/: graph.db
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: charter.yaml  ci.yml  codeql.yml  release-dry-run.yml  release.yml
.gitnexus/: meta.json
docs/: SMOKE_TEST.md  USER_GUIDE.md  ci-verification.md  onboarding-apple-developer.md  release-credentials-catalog.md  release-secrets.md  scope.md  scope.md~
docs/adr/: audio-video-ingest.md
docs/research-papers/: Achieving Annotation Integrity Across Platforms_ A Deterministic Pipeline for Qualitative Data Analysis Software.md  Architecting Dual-Path REFI-QDA Exports_ A Strategy for Strict Compliance and Permissive Import in Open-Source QDA Software.md  Architecting a High-Performance Analytics Layer for Desktop Qualitative Research_ An Implementation Blueprint for Co-occurrence, Visualization, and User-Centric Design.md  Architecting the Expert-QDA Workflow_ A Blueprint for an Accessible, Open-Source Tool Inspired by Industry Leaders.md  Architecting the QDA Data Layer_ A Blueprint for Read-Optimized Code Trees, Corpus-Ordered Search, and Future-Proofed Schemas.md  Designing a Standards-Compliant Multimedia Annotation Engine for Open-Source QDA Software.md  Electron Desktop App Architecture Report.md  From Isolation to Integration_ A Technical Blueprint for Methodologically Sound, Offline-First Collaborative Qualitative Research.md  LENS Audio Transcription Technical Report.md  QDA Analytics Dashboard Technical Plan.md  QDA App SQLite Data Model Report.md  QDA Collaboration and Reliability Report.md  QDA Document Import and Annotation Stability.md  QDA Multimedia Annotation Architecture.md  QDA Tool Research Report.md  QDA UX Design Patterns Report.md  REFI-QDA Export Plugin Technical Guide.md  Rich Text Editor for QDA Annotations.md  SYNTHESIS.md  The Lexical Advantage_ A Technical Blueprint for Overlapping Annotations in Qualitative Data Analysis.md  The Solo Maintainer's Choice_ Why Tauri's Architecture Offers Superior Longevity for a Local-First Qualitative Data Analysis App.md  v0.2-konva-perf-baseline.md
docs/research-prompts/: QDA_App_Deep_Research_Prompts.md  Qualitative-Data-Analysis-App-prompt.txt  Qualitative-Data-Analysis-App-prompt.txt~
e2e/: playwright.config.ts  smoke.spec.ts
e2e/fixtures/: sample.txt
python/: LICENSE  README.md  pyproject.toml
python/lens_qda/: __init__.py  cli.py
python/lens_qda.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/tests/: __init__.py  conftest.py  test_cli.py  test_cli_inprocess.py
scripts/: build-sidecar.sh  build_smoke_fixtures.py  generate-signing-key.sh  lens-screenshots.mjs  lint-i18n.sh  refresh-release-sha-pins.sh  release-dry-run.sh  set-release-credentials.sh  set-release-secrets.sh  smoke-test.sh
scripts/verify/: verify-export-csv.sh  verify-export-html.sh  verify-export-qdc.sh  verify-export-qdpx.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecars/pdfplumber/: extract.py  pdfplumber-x86_64-unknown-linux-gnu.spec  requirements.txt
src-tauri/src/: colors.rs  lib.rs  main.rs  test_helpers.rs  tests.rs
src-tauri/src/commands/: analytics.rs  analytics_icr.rs  annotations.rs  audio.rs  backup.rs  codes.rs  documents.rs  encryption.rs  export.rs  image_polygons.rs  image_regions.rs  import.rs  memos.rs  mod.rs  ollama.rs  project_settings.rs  projects.rs  qdpx_import.rs  sample_project.rs  search.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/db/migrations/: 01_initial_schema.sql  02_unique_text_hash.sql  03_add_code_updated_at.sql  04_image_format.sql  05_relax_plain_text.sql  06_image_polygon.sql  07_project_settings.sql
src-tauri/src/import/: docx.rs  image.rs  mod.rs  normalise.rs  pdf.rs  txt.rs
src-tauri/tests/: dbkey_panic_safety.rs  migration_round_trip.rs
src/export/: CsvExporter.ts  ExporterPlugin.ts  HtmlReporter.ts  QdcExporter.ts  QdpxExporter.test.ts  QdpxExporter.ts  index.ts
src/hooks/: useAssetBlobUrl.test.ts  useAssetBlobUrl.ts  usePromptDialog.ts  useTranscriptIndex.test.ts  useTranscriptIndex.ts
src/i18n/: index.ts
src/ipc/: analytics.ts  annotations.ts  audio.ts  backup.ts  codes.ts  documents.ts  encryption.ts  export.ts  image-polygons.ts  image-regions.ts  memos.ts  ollama.ts  project-settings.ts  projects.ts  qdpx_import.ts  search.ts  transcribe.ts
src/lib/: validation.ts
src/store/: projectStore.ts  uiStore.ts
src/utils/: icr.test.ts  icr.ts  offset-utils.test.ts  offset-utils.ts
test-results/: .last-run.json
test-results/smoke-smoke-project-→-import-→-code-→-annotate-→-export-QDPX-chromium/: error-context.md
test-results/tests-e2e-image-viewer-Ima-09150-gon-opens-the-action-Dialog/: error-context.md
test-results/tests-e2e-image-viewer-Ima-37a11-ionMemoDialog-with-codeName/: error-context.md
test-results/tests-e2e-image-viewer-Ima-8517c-s-from-Rectangle-to-Polygon/: error-context.md
test-results/tests-e2e-image-viewer-Ima-b3a0e--a-4-vertex-polygon-via-IPC/: error-context.md
tests/e2e/: README.md  analytics.spec.ts  (+9 more)
todo/: PLANS.md  lint-report-2026-06-24.md
(+61 files in other folders)
