[package]
name = "lens"
version = "0.1.0"
description = "A Tauri App"
authors = ["Mark Bouck"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-shell = "2.3.5"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio", "macros"] }
uuid = { version = "1.14.0", features = ["v4", "serde"] }
tokio = { version = "1.52.3", features = ["sync", "macros", "rt-multi-thread"] }
unicode-normalization = "0.1"
sha2 = "0.10"
hex = "0.4"
zip = "2"
roxmltree = "0.20"

[dev-dependencies]
tempfile = "3"

[features]
